# ModernTools

./: README.md
codes/html/TextCaseTransformer/01/: TextCaseTransformer.html
codes/python/FileEncodingDetector/qt6/01/: Enumerations1.H  file_encoding_detector.py
codes/python/FileEncodingDetector/qt6/02/: file_encoding_detector.py
codes/python/FileEncodingDetector/tkinter/01/: file_encoding_detector.py
codes/python/Linelayout/: Linelayout.py  my.txt
codes/python/PathConverter/01/: PathConverter.py
codes/python/PathConverter/01a/: PathConverter.py  README.txt
codes/python/PathConverter/gui-Kivy/01/: PathConverter.py
codes/python/PathConverter/gui-Kivy/01a/: PathConverter.py
codes/python/PathConverter/gui-Tkinter/01/: PathConverter.py
codes/python/PathConverter/gui-wxPython/01/: PathConverter.py  README.txt
codes/python/PathConverter/gui/01/: PathConverter.py
codes/python/PathConverter/gui/01a/: PathConverter.py
codes/python/PathConverter/gui/01b/: PathConverter.py
codes/python/PathConverter/gui/01c/: PathConverter.py
codes/python/PathConverter/gui/02/: PathConverter.py
codes/python/TextCaseTransformer/gui-Qt6/01/: case_converter.py
codes/python/TextCaseTransformer/gui-Tkinter/01/: case_converter.py
codes/python/deletebuilddir/: remove_foder.py
codes/qt/FileEncodingDetector/01/: CMakeLists.txt  main.cpp
codes/qt/FileEncodingDetector/02/: CMakeLists.txt  main.cpp
codes/qt/PathConverter/01/: main.cpp
codes/qt/PathConverter/01a/: CMakeLists.txt  main.cpp
codes/qt/TextCaseTransformer/01/: CMakeLists.txt  README.txt  main.cpp
